💥 🐛 🔥 Fix monster spellcasting traits; resolves #652
2024 rules interleave spellcasting with traits, i.e. spellcasting is now distributed among actions, bonus actions, legendary, etc.

Spellcasting elements are dispersed into lists of named attributes when QuteMonster is created. The spellcasting attribute will always return empty (to avoid breaking existing templates that reference that attribute).